# convertorSerdiTelecom

./: CMakeLists.txt  Dockerfile  install.sh  main.cpp  procfiles.cpp  procfiles.h
convertorSerdiTelecom/: CMakeCache.txt  Makefile  cmake_install.cmake  conf.ini  convertorSerdiTelecom
convertorSerdiTelecom/.cmake/api/v1/reply/: cmakeFiles-v1-c69b8cbffaa56012acdd.json  codemodel-v2-c5814f8441e7e4940f01.json  index-2025-06-26T09-35-23-0043.json
convertorSerdiTelecom/.cmake/api/v1/reply.prev/: cache-v2-5ac7573ffc81f3cfc991.json  directory-.-Debug-eef19adeaf28a336f6e3.json  target-convertorSerDiTelecom-Debug-ff940a5d8600ca51a8f7.json  target-convertorSerDiTelecom_autogen-Debug-476d4c4a3ae58027c1d9.json
convertorSerdiTelecom/.qtc_clangd/: compile_commands.json
convertorSerdiTelecom/.qtc_clangd/.cache/clangd/index/: QTime.F9F5FDCB3DF33A09.idx  main.cpp.20B4097B088DDFCD.idx  procfiles.cpp.8C706B385C4A77B0.idx  procfiles.h.A5DE6D8F67CDD38D.idx  qatomic.h.EDA2609CDEFA91A8.idx  qcoreapplication.h.FEE0D697086509DB.idx  qflags.h.041ACBB7FBD8C35E.idx  qglobal.h.2C17EABD0E130173.idx  qmap.h.AC1B3050263A0ACE.idx  qmetatype.h.19B847AEC93D6BFD.idx  qobject.h.0A7B81BA51982969.idx  qobjectdefs.h.02108DD41EF1A22C.idx  qobjectdefs.h.5E4FBB2E35F7B13C.idx  qsharedpointer_impl.h.2BA80EF576AEF929.idx  qstringlist.h.61F5B98C4176A868.idx  qvector.h.4324B21D0F890C5F.idx  stl_function.h.51000605949196E2.idx
